$Id: History,v 1.51 2002-03-22 15:42:39 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------


22 mar 02: V. Grichine (stand-V04-00-04)
- modifications in G4PAIxSection allowing to get additional information on
  transverse and longitudinal excitations at atomic frequences.
     
21 mar 02: mma (stand-V04-00-03)
- G4GammaConversion::DoIt() correction of e+e- angular distribution (bug 363)
     
27 fev 02: mma (stand-V04-00-02)
- V.Ivanchenko remove the fix for GenericIons in G4VhEnergyLoss, G4hIonisation;

27 fev 02: mma (stand-V04-00-01)
- V.Ivanchenko fix G4VhEnergyLoss, G4hIonisation for GenericIons;
- G4VeEnergyLoss and G4VhEnergyLoss : error in TouchebleHandle - take from 
  PreStepPoint  
     
10 fev 02: mma (stand-V04-00-00)
- G4VeEnergyLoss and G4VhEnergyLoss : error in SetMindeltaCutInRange,
  was set in Energy !  
     
11 jan 02: mma
- gammaConversion::ComputeCrossSection(): correction of extrapolation below 
  EnergyLimit
        
>>>>>>> 1.49
10 jan 02: mma 
- photoEffect: rearrangement in the inlined functions
     
12 nov 01: mma (stand-V03-02-14)
- ParticleMass and Charge : local variables
- merge 11a + 13
- some cleanup in G4hEnergyLoss.hh and .cc 
     
29 oct 01: mma (stand-V03-02-13)